--- a/Pomodoro WatchKit App/Base.lproj/Interface.storyboard
+++ b/Pomodoro WatchKit App/Base.lproj/Interface.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8121.20" systemVersion="14F27" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc" defaultGlanceController="0uZ-2p-rRc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="9046" systemVersion="14F27" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.16"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8066.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="9013"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
@@ -10,10 +10,11 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Pomodoro_WatchKit_Extension">
                     <items>
-                        <label width="1" height="59" alignment="left" text="You have no tasks! What about create a new one?" textAlignment="center" numberOfLines="0" id="xcP-eP-fcZ">
+                        <label width="1" height="59" alignment="left" text="You have no tasks! What about creating a new one?" textAlignment="center" numberOfLines="0" id="xcP-eP-fcZ">
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="font" type="system" pointSize="14"/>
                         </label>
-                        <imageView width="30" height="30" alignment="center" image="tomato1" animationDuration="1" id="0jV-uK-vgh">
+                        <imageView width="30" height="30" alignment="center" image="tomato1" initiallyAnimated="NO" animationDuration="1" id="0jV-uK-vgh">
                             <color key="tintColor" red="0.99215686274509807" green="0.37254901960784315" blue="0.36862745098039218" alpha="1" colorSpace="calibratedRGB"/>
                         </imageView>
                         <table alignment="center" id="uIM-1g-PTb">
@@ -45,7 +46,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="235" y="347"/>
+            <point key="canvasLocation" x="264" y="347"/>
         </scene>
         <!--Task Controller-->
         <scene sceneID="Svj-Wv-BPl">
